2000-09-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Much improved Solaris patch-level check for the
	FLL bug test.
	From: Marc.Brett@westgeo.com

2000-09-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/Makefile.am (noinst_HEADERS): Added ntp_tty.h
	Reported by Dave Mills

2000-09-16  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntptrace/ntptrace.c: 
	* ntpdate/ntptimeset.c (receive): 
	* ntpdate/ntpdate.c (receive):
	STRATUM cleanup
	* ntpd/refclock_atom.c (atom_poll): Autostratum.  Lose the leap.
	* ntpd/ntp_proto.c: sys_prefer
	(process_packet): stratum cleanup
	(clock_select): Autostratum the ATOM
	* ntpd/ntp_loopfilter.c: pps_update/pps_stratum wiggle.
	* include/ntpd.h: Lose pps_update, gain sys_prefer
	* include/ntp.h: STRATUM variable cleanup
	From Dave Mills

2000-09-13  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_oncore.c (oncore_get_timestamp): Prind debug
	messages being aware of HAVE_STRUCT_TIMESPEC.

	* ntpd/refclock_atom.c: Have pps_params tag along in the ppsunit
	structure, where it really belongs.
	(atom_pps): Use PPS_CAPTURE{ASSERT,CLEAR}
	From: Dave Mills.

2000-09-12  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (ac_cv_var_atom_ok): Cleanup ATOM/PPSAPI stuff...

	* scripts/ntp-close: Find "close" ntp servers.
	From: Neal McBurnett <neal@bcn.boulder.co.us>

	* ntpd/refclock_conf.c: 
	* ntpd/refclock_oncore.c: Re-enabled oncore driver for HAVE_PPSAPI
	case only.

2000-09-12  Philippe De Muyter  <phdm@macqel.be>

        * ntpd/refclock_parse.c (we400a_pollinfo): Useless variable removed.
        [WHARTON slot]: Set NO_POLL, NO_INIT and NO_DATA; fix `fixed format'
        and `offset' fields.

	* include/ntp_tty.h: New file
	* libntp/icom.c: Use it.

	* ntp_update (UPDATE_OPTIONS): Use -d, too.  Fix Pass 1 comment.

2000-09-12  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_oncore.c: shmem_fname added.  oncore_init_shmem()
	updated. 
	(oncore_start): Comment cleanup